# hadc-bench

./: .gitignore  README.md  __init__.py  cli.py  config.py  fetch_by_category_v2.py  paper.tex  pyproject.toml  requirements.txt  validate_paper.py
data_loader/: __init__.py  benchmark_loader.py  loader.py  temporal_sampler.py
dataset/: benchmark_dataset_v2.json
evaluation/: __init__.py  metrics.py
graph/: __init__.py  builder.py  nodes.py  state.py
models/: __init__.py  anthropic_model.py  base.py  gemini_model.py  grok_model.py  openai_model.py  openrouter_model.py  registry.py
prompts/: __init__.py  templates.py
results/run_20260129_113319_e29c_gpt-5.2-xhigh_no_tools/: config.json  summary.json  summary.md  traces.json
results/run_20260129_113326_782b_gpt-5.2-xhigh_with_tools/: config.json  summary.json  summary.md
results/run_20260129_130425_2a91_claude-opus-4.5_with_tools/: config.json  summary.json  summary.md
results/run_20260129_130428_55de_claude-opus-4.5_no_tools/: config.json  summary.json  summary.md
results/run_20260129_130821_6a50_gemini-3-pro_no_tools/: config.json  summary.json  summary.md
results/run_20260129_132645_edbc_grok-4.1-fast_no_tools/: config.json  summary.json  summary.md
results/run_20260129_133019_f8c0_gemini-3-pro_with_tools/: config.json  summary.json  summary.md
results/run_20260129_133620_270c_intellect-3_no_tools/: config.json  summary.json  summary.md  traces.json
results/run_20260129_140530_45fb_grok-4.1-fast_with_tools/: config.json  (+2 more)
runners/: __init__.py  runner.py
tools/: __init__.py  web_search.py
(+36 files in other folders)
